[gd_scene load_steps=2 format=3 uid="uid://dbrk8f1wf3w8j"]

[ext_resource type="Script" uid="uid://gg7tu2sekrml" path="res://src/combat/BattleResultPanel.gd" id="1_sj2yn"]

[node name="BattleResultPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sj2yn")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.63529414)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="OutcomeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerBox" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LossLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox"]
layout_mode = 2

[node name="LossGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect7" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect8" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect9" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect10" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect11" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect12" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect13" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect14" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="TextureRect15" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/PlayerBox/LossGrid"]
layout_mode = 2

[node name="EnemyBox" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LossLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox"]
layout_mode = 2

[node name="LossGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect7" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect8" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect9" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect10" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect11" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect12" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect13" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect14" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="TextureRect15" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/EnemyBox/LossGrid"]
layout_mode = 2

[node name="ExtraLogLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"
